# ryu-renderer

./: CMakeLists.txt  LICENSE  README.md
include/app/: App.h  AppSettings.h
include/app/Pipeline/: DefaultPipeline.h  IPipeline.h
include/app/events/: KeyEvent.h  MouseEvent.h  WindowEvent.h
include/app/render-pipeline/: BlendPipeline.h  DefaultRenderPipeline.h  IRenderPipeline.h  ModelViewPhongBlinnPipeline.h  StencilDepthPhongBlinnPipeline.h
include/common/: Factory.h  FileUtils.h  Macros.h  MacrosOff.h  Publisher.h  Singleton.h
include/graphics/: Frame.h  ITexture.h  Mesh.h  Shader.h  ShaderManager.h  Texture.h  Texture2D.h  Texture2d.h  TextureManager.h
include/graphics/scene/: Camera.h  DirectionalLight.h  IMaterial.h  MeshBatch.h  MeshObject.h  MeshObjectBatch.h  PhongBlinnMaterial.h  PhongBlinnMaterialData.h  PointLight.h  Scene.h  ShadedMesh.h  SpotLight.h  Transform.h
res/shaders/: 2d-texture.frag  2d-texture.vert  2d-unlit-gaussian-blur.frag  2d-unlit-simple.vert  3d-basic-color.frag  3d-basic-color.vert  3d-basic-texture.vert  3d-blinn-phong-light-original.frag  3d-blinn-phong-light-worldspace.frag  3d-blinn-phong-light.frag  3d-blinn-phong-light.vert  3d-blinn-phong-material.frag  3d-blinn-phong-material.vert  3d-light-test-0.frag  3d-outline-basic-color.vert  3d-phong-light.frag  3d-phong-light.vert  3d-unlit-simple.frag  3d-unlit-simple.vert  base.vs  simple.fs
src/: main.cpp
src/app/: App.cpp
src/graphics/: Frame.cpp  Mesh.cpp  Shader.cpp  ShaderManager.cpp  Texture2d.cpp  TextureManager.cpp
src/graphics/scene/: Camera.cpp  DirectionalLight.cpp  IMaterial.cpp  MeshBatch.cpp  MeshObjectBatch.cpp  PhongBlinnMaterial.cpp  PointLight.cpp  Scene.cpp  ShadedMesh.cpp  SpotLight.cpp  Transform.cpp
test/: BasicMaterialPipeline.h  BasicPhongBlinnMaterialPipeline.h  GuassianBlurPipeline.h  ModelViewPhongBlinnPipeline.h  PhongBlinnPipeline.h  TextureBox3dPipeline.h
